# amazon-kinesis-video-streams-webrtc-sdk-c

./: .clang-format  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis-clang-format  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ChannelInfo_8c.html  ChannelInfo_8c__incl.dot  ChannelInfo_8c__incl.map  ChannelInfo_8c__incl.md5  ChannelInfo_8c_a3e238d942faed37a679b58371551aecb_icgraph.map  ChannelInfo_8c_a464cf1c86d1808abf8f4c1b6583f4890_icgraph.map  ChannelInfo_8c_a464cf1c86d1808abf8f4c1b6583f4890_icgraph.md5  ChannelInfo_8c_a8905e3a1f13ab3a638df50f03ab30bd8_icgraph.dot  ChannelInfo_8c_a8905e3a1f13ab3a638df50f03ab30bd8_icgraph.map  ChannelInfo_8c_a8905e3a1f13ab3a638df50f03ab30bd8_icgraph.md5  ChannelInfo_8c_a8a9f270957f5b1d641521615089742bf_icgraph.map  ChannelInfo_8c_a8a9f270957f5b1d641521615089742bf_icgraph.md5  ChannelInfo_8c_ace032d897b4d6d58dea23b77476ff225_icgraph.map  ChannelInfo_8c_ad0868d0a2cc5b05d94d83fc21711e9e5_cgraph.dot  ChannelInfo_8c_ad0868d0a2cc5b05d94d83fc21711e9e5_cgraph.md5  ChannelInfo_8c_ad0868d0a2cc5b05d94d83fc21711e9e5_icgraph.map  ChannelInfo_8c_ad0868d0a2cc5b05d94d83fc21711e9e5_icgraph.md5  ChannelInfo_8c_ae17a90f8acd89056991245315f8cf725_icgraph.dot  ChannelInfo_8c_ae17a90f8acd89056991245315f8cf725_icgraph.map  ChannelInfo_8c_ae17a90f8acd89056991245315f8cf725_icgraph.md5  ChannelInfo_8h.html  ChannelInfo_8h__dep__incl.dot  ChannelInfo_8h__dep__incl.map  ChannelInfo_8h__dep__incl.md5  ChannelInfo_8h_a18501079617f002f543ce88582321477_icgraph.dot  ChannelInfo_8h_a18501079617f002f543ce88582321477_icgraph.map  ChannelInfo_8h_a18501079617f002f543ce88582321477_icgraph.md5  ChannelInfo_8h_a223e23ade70678ecfbca03923e37000e_icgraph.dot  ChannelInfo_8h_a223e23ade70678ecfbca03923e37000e_icgraph.map  ChannelInfo_8h_a223e23ade70678ecfbca03923e37000e_icgraph.md5  ChannelInfo_8h_a2dbd72bf5adfb65831a2398505efb913_icgraph.map  (+4689 more)
android-test-app/: CMakeLists.txt  build.gradle  gradle.properties  jni_bridge.cpp  settings.gradle
android-test-app/app/: build.gradle
aws-cpp-sdk-integ/: CMakeLists.txt  CloudwatchMetricsMonitoring.cpp  CloudwatchMetricsMonitoring.h  Config.cpp  Config.h  kvsWebRTCClientMasterCloudwatch.cpp
bench/: CMakeLists.txt  DtlsBenchmark.cpp  WebRTCClientBenchmarkFixture.cpp  WebRTCClientBenchmarkFixture.h
cloudwatch-integ/: CMakeLists.txt  Cloudwatch.cpp  Cloudwatch.h  CloudwatchLogs.cpp  CloudwatchLogs.h  CloudwatchMonitoring.cpp  CloudwatchMonitoring.h  Include.h  README.md  config_periodic.h  kvsWebRTCClientMasterCloudwatch.cpp  kvsWebRTCClientViewerCloudwatch.cpp
cloudwatch-integ/configs/: default_config.h  lr_iot_h264_mbedtls.h  lr_iot_h264_openssl.h  lr_static_h265_openssl.h  p_iot_h265_mbedtls.h  p_iot_h265_openssl.h  p_static_h264_mbedtls.h  storage_extended.h  storage_periodic.h  storage_single_reconnect.h  storage_sub_reconnect.h
samples/: CMakeLists.txt  Callbacks.c  CameraInput.c  Common.c  DemoConfig.c  GstAudioVideoReceiver.c  MetricsHandling.c  MjpegH264Extractor.c  MjpegH264Extractor.h  README_Camera.md  Samples.h  StreamingSession.c  Utility.c  V4L2LoopbackOutput.c  V4L2LoopbackOutput.h  c_wrapper.cpp  c_wrapper.h  config_default.h  createPresignedUrl.c  customSignaling.c  dirent.h  discoverNatBehavior.c  gstSample.h  kvsMetricsMonitoring.c  kvsWebRTCClientBasicStorageSession.c  kvsWebRTCClientGstreamerStorageSession.c  kvsWebRTCClientMaster.c  kvsWebRTCClientMasterCamera.c  kvsWebRTCClientMasterCamera2.c  kvsWebRTCClientMasterCameraDebug.c  kvsWebRTCClientMasterCloudwatch.c  kvsWebRTCClientMasterDualCamera.c  kvsWebRTCClientMasterGstSample.c  kvsWebRTCClientMasterGstreamerSample.c  kvsWebRTCClientMasterRtspSample.c  kvsWebRTCClientPresignedMaster.c  kvsWebRTCClientStorageSession.c  kvsWebRTCClientViewer.c  kvsWebRTCClientViewerGstSample.c  kvsWebRTCEchoMaster.c  (+3 more)
samples/aacSampleFrames/: sample-000.aac  sample-001.aac  sample-002.aac  sample-003.aac  sample-004.aac  sample-005.aac  sample-006.aac  sample-007.aac  sample-008.aac  sample-009.aac  sample-010.aac  sample-011.aac  sample-012.aac  sample-013.aac  sample-014.aac  sample-015.aac  sample-016.aac  sample-017.aac  sample-018.aac  sample-019.aac  sample-020.aac  sample-021.aac  sample-022.aac  sample-023.aac  sample-024.aac  sample-025.aac  sample-026.aac  sample-027.aac  sample-028.aac  sample-029.aac  sample-030.aac  sample-031.aac  sample-032.aac  sample-033.aac  sample-034.aac  sample-035.aac  sample-036.aac  sample-037.aac  sample-038.aac  sample-039.aac  (+234 more)
samples/common/: Common.c  GstMedia.c  GstMedia.h  Samples.h  StaticMedia.c  StaticMedia.h
samples/examples/: abstraction.c  abstraction.h  samplePeer.c  samplePeer.h  sampleSignaling.c  sampleSignaling.h  simpleMaster.c
samples/h264SampleFrames/: README.md  frame-0001.h264  frame-0002.h264  frame-0003.h264  frame-0004.h264  frame-0005.h264  frame-0006.h264  frame-0007.h264  frame-0008.h264  frame-0009.h264  frame-001.h264  frame-0010.h264  frame-0011.h264  frame-0012.h264  frame-0013.h264  frame-002.h264  (+1888 more)
src/: CMakeLists.txt
superbuild/: CMakeLists.txt  CMakePresets.json
tst/: CMakeLists.txt  Common.c  CryptoApiTest.cpp  CustomEndpointTest.cpp  DataChannelApiTest.cpp  DataChannelFunctionalityTest.cpp  DtlsApiTest.cpp  DtlsFunctionalityTest.cpp  DualStackEndpointsTest.cpp  ExponentialBackoffUtilsTest.cpp  GccFunctionalityTest.cpp  IOBufferFunctionalityTest.cpp  IceApiTest.cpp  IceConfigParsingTest.cpp  IceFunctionalityTest.cpp  IngestionFunctionalityTests.cpp  JitterBufferFunctionalityTest.cpp  MetricsApiTest.cpp  MetricsFunctionalityTest.cpp  NatBehaviorTest.cpp  NetworkApiTest.cpp  PeerConnectionApiTest.cpp  PeerConnectionFunctionalityTest.cpp  RollingBufferFunctionalityTest.cpp  RtcpFunctionalityTest.cpp  RtpFunctionalityTest.cpp  RtpRollingBufferFunctionalityTest.cpp  Samples.h  SdpApiTest.cpp  SdpFunctionalityTest.cpp  SignalingApiFunctionalityTest.cpp  SignalingApiFunctionalityTest.h  SignalingApiTest.cpp  SrtpApiTest.cpp  StunApiTest.cpp  StunFunctionalityTest.cpp  TEST_kvsWebRTCClientMaster.c  TEST_kvsWebRTCClientViewer.c  TurnConnectionFunctionalityTest.cpp  WebRTCClientTestFixture.cpp  (+3 more)
(+3615 files in other folders)
